refactor(model): replace @Accessors by builders use records where it's possible
refs: TMI-395